--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.8",
+    "axios": "^0.24.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
