--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@types/less": "^3.0.3",
     "@types/node": "^17.0.8",
     "axios": "^0.24.0",
     "vue": "^2.5.2",
