--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/less": "^3.0.3",
     "@types/node": "^17.0.8",
     "axios": "^0.24.0",
+    "element-ui": "^2.15.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
