--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.8",
     "axios": "^0.24.0",
     "element-ui": "^2.15.6",
+    "markdown-it": "^12.3.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
